--- a/_posts/2014-10-02-version-2.md
+++ b/_posts/2014-10-02-version-2.md
@@ -15,7 +15,7 @@ Today, we’ve released an update to the TextBundle format. It includes the foll
 
 Of course, we provide an example file for new [TextBundle files][2] and [TextPack files][3].
 
-Until the standard has been adapted, we also provide an example for the [TextBundle v1 format][1].
+Until the standard has been adopted, we also provide an example file for the [TextBundle format version 1][1].
 
 [1]:	/downloads/example-bundle-v1.zip
 [2]:	/downloads/example-bundle-v2.zip
